--- a/views/pages/sign.ejs
+++ b/views/pages/sign.ejs
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/sign.css">
     <title>Sign In</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="form-container sign-up">
-            <form action="#">
+            <form action="/signup" method="post">
                 <h2>sign up</h2>
                 <div class="form-group">
-                    <input type="text" required>
+                    <input type="text" name="username" required>
                     <i class="fas fa-user"></i>
                     <label for="">username</label>
                 </div>
                 <div class="form-group">
-                    <input type="email" required>
+                    <input type="email" name="email" required>
                     <i class="fas fa-at"></i>
                     <label for="">email</label>
                 </div>
                 <div class="form-group">
-                    <input type="text" required>
+                    <input type="text" name="password" required>
                     <i class="fas fa-lock"></i>
                     <label for="">password</label>
                 </div>
@@ -39,21 +39,22 @@
             </form>      
         </div>
         <div class="form-container sign-in">
-            <form action="#">
+            <form action="/login" method="post">
                 <h2>Login</h2>
                 <div class="form-group">
-                    <input type="text" required>
+                    <input type="text" name="username" required>
                     <i class="fas fa-user"></i>
                     <label for="">username</label>
                 </div>
                 <div class="form-group">
-                    <input type="text" required>
+                    <input type="text" name="password" required>
                     <i class="fas fa-lock"></i>
                     <label for="">password</label>
                 </div>
                 <div class="forgot-pass">
                     <a href="#">forgot password?</a>
                 </div>
+                <p class="error"><%= message %></p>
                 <button type="submit" class="btn">login</button>
                 <div class="link">
                     <p>Dont't have an account?</p>
@@ -63,6 +64,6 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/9e5ba2e3f5.js" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/sign.js"></script>
 </body>
 </html>
