--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -26,6 +26,7 @@
                     <hr>                        
                 </div>
                 <div class="friends-list" id="add-friend">
+                    <% if(user.friends){ %>
                     <% user.friends.forEach(friend => { %>
                         <div class="friend">
                             <i class="fa-solid fa-circle-user"></i>
@@ -36,6 +37,7 @@
                             </div>
                         </div>
                     <% }); %>
+                    <% }%>
                 </div>
             </div>
             <div class="chat-section" id="chatSection">
